---
config:
  layout: elk
  theme: mc
---
classDiagram
direction LR
    class PlaceModel {
	    +string name
	    +string description
	    +float price
	    +float latitude
	    +float longitude
	    +updated_place(place)
	    +add_amenity(amenity)
	    +create_place()
	    +delete_place(place)
    }
    class AmenityModel {
	    +string name
	    +string description
	    +update_amenity(amenity)
	    +listamenity()
	    +create_amenity()
	    +delete_amenity(amenity)
    }
    class UserModel {
	    +string first_name
	    +string last_name
	    +string email
	    -string password
	    +bool admin
	    +authenticate(email, password)
	    +create_profile()
	    +update_profile(user)
	    +delete_profile(user)
    }
    class ReviewModel {
	    +string text
	    +int rating
	    +update_review(review)
	    +create_review()
	    +delete_review(review)
    }
    class BaseModel {
	    +UUID4 Id
	    +Datetime created_at
	    +Datetime updated_at
    }
    BaseModel --|> ReviewModel : Inheritance
    BaseModel --|> PlaceModel : Inheritance
    BaseModel --|> UserModel : Inheritance
    BaseModel --|> AmenityModel : Inheritance
    UserModel "1" --> "*" PlaceModel
    UserModel "1" --> "*" ReviewModel
    ReviewModel "*" --> "1" PlaceModel
    PlaceModel "*" -- "*" AmenityModel
